Integrated Jon Aquino's IE date parsing fix. Minor HTML tweaks & function name changes for better namespacing.

--- a/twitter_statuses.css
+++ b/twitter_statuses.css
@@ -1,29 +1,35 @@
 body { background-color: #000; }
-#my_twitter { float: left; }
-#my_twitter a img {
+#mtaTwitter { padding: 0; }
+#mtaTwitter > a { float: left; }
+#mtaTwitter a img {
 	height: 48px;
     width: 48px;
     border: 1px solid #CCC;
 }
-#my_twitter_statuses:before {
-    float: left;
-    display: block;
+#mtaTwitterStatuses:before {
+	display: block;
+    position: absolute;
+    top: 15px;
+    left: -11px;
     width: 11px;
     height: 21px;
-    margin-top: 15px;
-    margin-left: -11px;
+    margin: 0;
     content: url("white_triangle-left.png");
 }
-#my_twitter_statuses {
-    position: relative;
+#mtaTwitterStatuses {
+	position: relative;
     background-color: #fff;
+    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
     list-style: none;
+    margin: 0;
     margin-left: 66px;
     padding: 0px;
     font-family: Helvetica, sans-serif;
 }
-#my_twitter_statuses li { padding: 10px 10px; font-size: 10pt; }
-#my_twitter_statuses li.first { font-size: 18pt; font-weight: bold; }
-#my_twitter_statuses li.even { background-color: #EDEEFD; }
-#my_twitter_statuses li.first span { font-size: 10pt; font-weight: normal; }
-#my_twitter_statuses li span { font-style: normal; }
+#mtaTwitterStatuses li { padding: 10px 10px; font-size: 10pt; }
+#mtaTwitterStatuses li.first { font-size: 18pt; font-weight: bold; }
+#mtaTwitterStatuses li.even { background-color: #EDEEFD; }
+#mtaTwitterStatuses li.first span { font-size: 10pt; font-weight: normal; }
+#mtaTwitterStatuses li span { font-style: normal; }
